Fixing Quick Chat link

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     <div class="rl-col xs-4">
                         <div class="footer-links-list">
                             <div class="footer-links-listietm">
-                                <a href="javascript:void(0)" class="footer-links-listietm-link chat-link col-secondary"><img src="/images/quick-chat.svg" /></a>
+                                <a href="https://forms.gle/GLiPXfUzU95XK9cw9" class="footer-links-listietm-link chat-link col-secondary"><img src="/images/quick-chat.svg" /></a>
                             </div>
                         </div>
                     </div>
